--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -81,7 +81,7 @@
         <!-- 왼쪽 비주얼 -->
         <aside class="ap-aside d-none d-lg-flex col-lg-6">
             <div class="ap-aside-inner">
-                <div class="ap-badge">동구라미 온</div>
+                <div class="ap-badge">춘천지켜봄</div>
                 <h2>친환경 생활, 오늘부터 가볍게</h2>
                 <p>참여하고, 포인트도 모으고, 우리 동네가 바뀌는 걸 지켜보세요.</p>
             </div>
